#
#    Copyright 2018 Google LLC
#    All Rights Reserved.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
#

#
#    Description:
#      This file is the GNU automake template for the Nest Labs Embedded
#      Runtime public headers.
#

include $(abs_top_nlbuild_autotools_dir)/automake/pre.am

include_HEADERS             = \
    nlabs-variants.h          \
    nlalgorithm.hpp           \
    nlalignedvarpool.hpp      \
    nlalignment.h             \
    nlbase64.h                \
    nlcore.h                  \
    nlcore-internal.h         \
    nlerror-base.h            \
    nlerror-components.h      \
    nlerror.h                 \
    nlerror-posix.h           \
    nlfixedpoint.h            \
    nlmacros.h                \
    nlmemset16.h              \
    nlnew.hpp                 \
    nlnoncopyable.hpp         \
    nluif.h                   \
    nlutilities.h             \
    nlutilities.hpp           \
    $(NULL)

install-headers: install-data

include $(abs_top_nlbuild_autotools_dir)/automake/post.am
